[package]
name = "web-dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
hex = "0.4.3"
log = "0.4.16"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt", "sync", "macros"] }
futures = { version = "0.3.21", features = ["alloc"], default-features = false }
env_logger = "0.9.0"

[dev-dependencies]
env_logger = "0.9.0"
log = { version="*", features = ["max_level_trace"] }
