[package]
name = "wdht-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
hex = { version = "0.4.3", features = [] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt", "sync", "macros"] }
futures = { version = "0.3.21", features = ["alloc"], default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
tracing = "0.1.34"

[dev-dependencies]
log = { version="*", features = ["max_level_trace"] }
rand = { version = "*", default-features = true }
test-log = { version = "0.2.10", default-features=false, features=["trace"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[features]
default = ["serde"]
serde = ["dep:serde", "hex/serde"]
