[package]
name = "wdht-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.18.1", features = ["rt-multi-thread"] }
warp = { version = "0.3.2", default-features = false }
wdht-logic = { path = "../logic", version = "0.1" }
wdht-transport = { path = "../transport", version = "0.1" }
