[package]
name = "wdht-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
console-subscriber = "0.1.6"
futures = "0.3.21"
rand = "0.8.5"
reqwest = "0.11.10"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
warp = { version = "0.3.2", default-features = false }
wdht-logic = { path = "../logic", version = "0.1" }
wdht-transport = { path = "../transport", version = "0.1" }
