[package]
name = "wdht-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdht = { path = "../wdht", version = "0.1" }
clap = { version = "3.1.15", features = ["derive"] }
futures = "0.3.21"
itertools = "0.10.3"
rand = "0.8.5"
reqwest = "0.11.10"
tokio = { version = "1.18", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1.34", features = ["release_max_level_info"]}
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
warp = { version = "0.3.2", default-features = false }
datachannel = { version = "0.7.8", features = ["static", "tracing"], default-features = false }
