[package]
name = "wdht-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["rt", "sync", "macros", "time"] }
wdht-logic = { path = "../logic", version = "0.1" }
serde = "1.0.136"
serde_json = "1.0.79"
log = "0.4.16"
thiserror = "1.0.30"
futures = { version = "0.3.21", features = ["alloc"], default-features = false}
datachannel = "0.7.6"
once_cell = "1.10.0"
warp = { version = "0.3.2", optional = true, default-features = false }
reqwest = { version = "0.11.10", features = ["json"] }
rand = "0.8.5"

[dev-dependencies]


[features]
default = ["warp_filter"]
warp_filter = ["warp"]
