[package]
name = "wdht-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
wdht-logic = { path = "../logic", version = "0.1" }
wdht-wrtc = { path = "../wrtc", version = "0.1" }
wdht-wasync = { path = "../wasync", version = "0.1" }
tokio = { version = "1.18", features = ["sync", "macros"] }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11.10", features = ["json"] }
rand = "0.8.5"
tracing = "0.1.34"
async-broadcast = "0.4.0"

warp = { version = "0.3.2", optional = true, default-features = false }
bytes = "1.1.0"

[dev-dependencies]


[features]
default = ["warp"]
