[package]
name = "wdht"
version = "0.1.0"
edition = "2021"

[dependencies]
wdht-logic = { path = "../logic", version = "0.1" }
wdht-wrtc = { path = "../wrtc", version = "0.1" }
wdht-wasync = { path = "../wasync", version = "0.1" }
wdht-crypto = { path = "../crypto", version = "0.1" }
tokio = { version = "1.18", features = ["sync", "macros"] }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11.10", features = ["json"] }
rand = "0.8.5"
tracing = "0.1.36"
async-broadcast = "0.4.0"

warp = { version = "0.3.2", optional = true, default-features = false }
base64 = "0.13.0"
serde_bytes = "0.11.6"

[dev-dependencies]
log = { version="*", features = ["max_level_trace"] }
rand = { version = "*", default-features = true }
test-log = { version = "0.2.10", default-features=false, features=["trace"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.18", features = ["rt-multi-thread"] }


[features]
default = ["warp"]
