[package]
name = "wdht-wrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdht-wasync = { path = "../wasync", version = "0.1" }
tokio = { version = "1.18", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"


# Non-wasm dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = "0.4.0"

# Wasm dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceConnectionState",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelType",
]
